--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# 
+
 # User-specific files
 *.rsuser
 *.suo
@@ -32,6 +34,8 @@ bld/
 [Ll]og/
 [Ll]ogs/
 
+# Visual Studio Code
+.vscode/
 # Visual Studio 2015/2017 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
